--- a/fontscale.sty
+++ b/fontscale.sty
@@ -1,5 +1,5 @@
 % Package   : fontscale -- A flexible interface for setting font sizes
-% Copyright : 2024 (c) Oliver Beery <beeryoliver@gmail.com>
+% Copyright : 2024-2025 (c) Oliver Beery <beeryoliver@gmail.com>
 % CTAN      : https://ctan.org/pkg/fontscale
 % Repository: https://github.com/beeryoliver/fontscale
 % License   : The LaTeX Project Public License 1.3c
@@ -8,8 +8,8 @@
 \NeedsTeXFormat{LaTeX2e}[2023-11-01]
 \ProvidesExplPackage
   {fontscale}
-  {2024-12-22}
-  {3.0.4}
+  {2025-01-03}
+  {3.0.5}
   {A flexible interface for setting font sizes}
 
 % l3kernel version 2023-10-10 added many 'e'-variants.
@@ -25,6 +25,77 @@
   }
 
 % This package does not require any other packages!
+
+% MESSAGES
+
+\msg_new:nnn { fontscale } { key-musical-base-out-of-bounds }
+  {
+    Invalid~ value~ '#1'~ \msg_line_context:. \\
+    The~ value~ of~ the~ key~ 'musical / base'~
+    must~ be~ a~ positive~ length.
+  }
+\msg_new:nnn { fontscale } { key-musical-ratio-out-of-bounds }
+  {
+    Invalid~ value~ '#1'~ \msg_line_context:. \\
+    The~ value~ of~ the~ key~ 'musical / ratio'~
+    must~ be~ greater~ than~ 1.
+  }
+\msg_new:nnn { fontscale } { key-musical-notes-out-of-bounds }
+  {
+    Invalid~ value~ '#1'~ \msg_line_context:. \\
+    The~ value~ of~ the~ key~ 'musical / notes'~
+    must~ be~ a~ positive~ integer.
+  }
+\msg_new:nnn { fontscale } { key-font-scale-out-of-bounds }
+  {
+    Invalid~ value~ '#1'~ \msg_line_context:. \\
+    The~ value~ of~ the~ key~ '#2 / scale'~
+    must~ be~ positive.
+  }
+\msg_new:nnn { fontscale } { key-font-size-out-of-bounds }
+  {
+    Invalid~ value~ '#1'~ \msg_line_context:. \\
+    The~ value~ of~ the~ key~ '#2 / size'~
+    must~ be~ a~ positive~ length.
+  }
+\msg_new:nnn { fontscale } { key-font-scale-overwritten }
+  {
+    The~ font~ size~ set~ by~ the~ key~ '#1 / scale'~
+    has~ been~ overwritten~ by~ the~ key~ '#1 / size'~ \msg_line_context:.
+  }
+\msg_new:nnn { fontscale } { font-sizes-out-of-order }
+  {
+    The~ font~ sizes~ are~ not~ in~ the~ correct~ order~ \msg_line_context:. \\
+    The~ lengths~ of~ the~ font~ sizes~ should~ be~ ordered~ from~
+    \iow_char:N \\tiny~ to~ \iow_char:N \\Huge.
+  }
+
+% This package tests for math mode only at the user level because this is not
+% necessary for programmers. To avoid confusion, this package issues a warning
+% when \fontsize + \selectfont would be used in math mode because it would not
+% change the math font size.
+\msg_new:nnn { fontscale } { math-mode-warning }
+  { '#1'~ does~ nothing~ if~ used~ in~ math~ mode~ \msg_line_context:. }
+% \@ and \par cannot be used in math mode.
+\msg_new:nnn { fontscale } { math-mode-error }
+  { '#1'~ cannot~ be~ used~ in~ math~ mode~ \msg_line_context:. }
+\msg_new:nnn { fontscale } { font-size-out-of-bounds }
+  {
+    Invalid~ font~ size~ '#1'~ \msg_line_context:. \\
+    The~ font~ size~ must~ be~ a~ positive~ length.
+  }
+\msg_new:nnn { fontscale } { font-step-out-of-bounds }
+  {
+    Invalid~ font~ step~ '#1'~ \msg_line_context:. \\
+    The~ font~ step~ must~ equal~ the~ font~ step~ of~
+    any~ font~ size~ command~ from~ \iow_char:N \\tiny~ to~ \iow_char:N \\Huge~
+    unless~ the~ value~ of~ the~ key~ 'typographic-scale'~ is~ 'musical'.
+  }
+\msg_new:nnn { fontscale } { current-font-step-out-of-bounds }
+  {
+    The~ new~ font~ step~ could~ not~ be~ calculated~
+    because~ the~ current~ font~ step~ is~ undefined~ \msg_line_context:.
+  }
 
 % SOME VARIABLES
 
@@ -119,7 +190,8 @@
 % point expression by using \fp_set_eq:NN when the font size equals the font
 % size of any font size command from \tiny to \Huge. The case when the font
 % size equals that of \normalsize is optimized further because it is by far
-% the most common case.
+% the most common case. \f@size and \f@baselineskip are not used elsewhere in
+% the code.
 \hook_gput_code:nnn { selectfont } { fontscale }
   { \__fontscale_hook_selectfont: }
 \cs_new_protected:Npn \__fontscale_hook_selectfont:
@@ -186,13 +258,13 @@
       }
       { \__fontscale_hook_selectfont_auxii: }
   }
-% For speed, \__fontscale_hook_selectfont_auxii: uses \f@size instead of
-% \l_fontscale_size_dim. The case where the base font size of the musical
-% typographic scale equals the font size of \normalsize is optimized further.
 \cs_new_protected:Npn \__fontscale_hook_selectfont_auxii:
   {
     \fp_set:Nn \l_fontscale_scale_fp
-      { \f@size / \l__fontscale_normalsize_size_fp }
+      {
+        \dim_to_fp:n { \l_fontscale_size_dim }
+        * \l__fontscale_normalsize_size_reciprocal_fp
+      }
     \str_if_eq:VnTF \l__fontscale_typographic_scale_str { musical }
       {
         \fp_set:Nn \l_fontscale_step_fp
@@ -203,7 +275,10 @@
                 \dim_compare:nNnTF \l__fontscale_musical_base_dim =
                   \l_fontscale_normalsize_size_dim
                   { \l_fontscale_scale_fp }
-                  { \f@size / \l__fontscale_musical_base_fp }
+                  {
+                    \dim_to_fp:n { \l_fontscale_size_dim }
+                    * \l__fontscale_musical_base_reciprocal_fp
+                  }
               )
           }
       }
@@ -212,10 +287,14 @@
 
 % Used only to speed up floating point calculations.
 \fp_new:N \l__fontscale_normalsize_size_fp
-\fp_set:Nn \l__fontscale_normalsize_size_fp { 10 }
+\fp_new:N \l__fontscale_normalsize_size_reciprocal_fp
 \fp_new:N \l__fontscale_musical_base_fp
-\fp_new:N \l__fontscale_musical_notes_fp
+\fp_new:N \l__fontscale_musical_base_reciprocal_fp
+\fp_new:N \l__fontscale_musical_notes_reciprocal_fp
 \fp_new:N \l__fontscale_musical_selectfont_fp
+
+\fp_set:Nn \l__fontscale_normalsize_size_fp { 10 }
+\fp_set:Nn \l__fontscale_normalsize_size_reciprocal_fp { 0.1 }
 
 % Scratch variable
 \fp_new:N \l__fontscale_tmp_fp
@@ -248,17 +327,19 @@
   }
 \cs_generate_variant:Nn \__fontscale_skip_set_from_user:Nn { c }
 % Argument processors
-\dim_new:N \l__fontscale_arg_process_dim
 \cs_new_protected:Npn \__fontscale_arg_process_dim:n #1
   {
-    \__fontscale_dim_set_from_user:Nn \l__fontscale_arg_process_dim {#1}
-    \tl_set:NV \ProcessedArgument \l__fontscale_arg_process_dim
+    \group_begin:
+      \__fontscale_dim_set_from_user:Nn \l_tmpa_dim {#1}
+    \exp_args:NNNV \group_end:
+    \tl_set:Nn \ProcessedArgument \l_tmpa_dim
   }
-\skip_new:N \l__fontscale_arg_process_skip
 \cs_new_protected:Npn \__fontscale_arg_process_skip:n #1
   {
-    \__fontscale_skip_set_from_user:Nn \l__fontscale_arg_process_skip {#1}
-    \tl_set:NV \ProcessedArgument \l__fontscale_arg_process_skip
+    \group_begin:
+      \__fontscale_skip_set_from_user:Nn \l_tmpa_skip {#1}
+    \exp_args:NNNV \group_end:
+    \tl_set:Nn \ProcessedArgument \l_tmpa_skip
   }
 % Used to define \tiny to \Huge. Sets \@currsize only for compatibility. Need
 % \dim_use:N only for compatibility with versions of the microtype package
@@ -291,87 +372,19 @@
 % Similar to \__fontscale_set_font_size:nn, except that it sets the font
 % baselineskip equal to the new font size times the baselineskip-size-ratio.
 \cs_new_protected:Npn \__fontscale_set_font_size:n #1
-  { \exp_args:Ne \__fontscale_set_font_size_aux:n { \dim_to_decimal:n {#1} } }
+  { \exp_args:Ne \__fontscale_set_font_size_aux:n { \dim_eval:n {#1} } }
 \cs_new_protected:Npn \__fontscale_set_font_size_aux:n #1
   {
-    \dim_compare:nNnTF { #1 pt } > \c_zero_dim
+    \dim_compare:nNnTF {#1} > \c_zero_dim
       {
-        \fontsize { #1 pt }
-          { \fp_to_dim:n { #1 * \l__fontscale_baselineskip_size_ratio_fp } }
+        \fontsize {#1}
+          {
+            \fp_to_dim:n
+              { \dim_to_fp:n {#1} * \l__fontscale_baselineskip_size_ratio_fp }
+          }
         \selectfont
       }
-      { \msg_error:nnn { fontscale } { font-size-out-of-bounds } { #1 pt } }
-  }
-
-% MESSAGES
-
-\msg_new:nnn { fontscale } { key-musical-base-out-of-bounds }
-  {
-    Invalid~ value~ '#1'~ \msg_line_context:. \\
-    The~ value~ of~ the~ key~ 'musical / base'~
-    must~ be~ a~ positive~ length.
-  }
-\msg_new:nnn { fontscale } { key-musical-ratio-out-of-bounds }
-  {
-    Invalid~ value~ '#1'~ \msg_line_context:. \\
-    The~ value~ of~ the~ key~ 'musical / ratio'~
-    must~ be~ greater~ than~ 1.
-  }
-\msg_new:nnn { fontscale } { key-musical-notes-out-of-bounds }
-  {
-    Invalid~ value~ '#1'~ \msg_line_context:. \\
-    The~ value~ of~ the~ key~ 'musical / notes'~
-    must~ be~ a~ positive~ integer.
-  }
-\msg_new:nnn { fontscale } { key-font-scale-out-of-bounds }
-  {
-    Invalid~ value~ '#1'~ \msg_line_context:. \\
-    The~ value~ of~ the~ key~ '#2 / scale'~
-    must~ be~ positive.
-  }
-\msg_new:nnn { fontscale } { key-font-size-out-of-bounds }
-  {
-    Invalid~ value~ '#1'~ \msg_line_context:. \\
-    The~ value~ of~ the~ key~ '#2 / size'~
-    must~ be~ a~ positive~ length.
-  }
-\msg_new:nnn { fontscale } { key-font-scale-overwritten }
-  {
-    The~ font~ size~ set~ by~ the~ key~ '#1 / scale'~
-    has~ been~ overwritten~ by~ the~ key~ '#1 / size'~ \msg_line_context:.
-  }
-\msg_new:nnn { fontscale } { font-sizes-out-of-order }
-  {
-    The~ font~ sizes~ are~ not~ in~ the~ correct~ order~ \msg_line_context:. \\
-    The~ lengths~ of~ the~ font~ sizes~ should~ be~ ordered~ from~
-    \iow_char:N \\tiny~ to~ \iow_char:N \\Huge.
-  }
-
-% This package tests for math mode only at the user level because this is not
-% necessary for programmers. To avoid confusion, this package issues a warning
-% when \fontsize + \selectfont would be used in math mode because it would not
-% change the math font size.
-\msg_new:nnn { fontscale } { math-mode-warning }
-  { '#1'~ does~ nothing~ if~ used~ in~ math~ mode~ \msg_line_context:. }
-% \@ and \par cannot be used in math mode.
-\msg_new:nnn { fontscale } { math-mode-error }
-  { '#1'~ cannot~ be~ used~ in~ math~ mode~ \msg_line_context:. }
-\msg_new:nnn { fontscale } { font-size-out-of-bounds }
-  {
-    Invalid~ font~ size~ '#1'~ \msg_line_context:. \\
-    The~ font~ size~ must~ be~ a~ positive~ length.
-  }
-\msg_new:nnn { fontscale } { font-step-out-of-bounds }
-  {
-    Invalid~ font~ step~ '#1'~ \msg_line_context:. \\
-    The~ font~ step~ must~ equal~ the~ font~ step~ of~
-    any~ font~ size~ command~ from~ \iow_char:N \\tiny~ to~ \iow_char:N \\Huge~
-    unless~ the~ value~ of~ the~ key~ 'typographic-scale'~ is~ 'musical'.
-  }
-\msg_new:nnn { fontscale } { current-font-step-out-of-bounds }
-  {
-    The~ new~ font~ step~ could~ not~ be~ calculated~
-    because~ the~ current~ font~ step~ is~ undefined~ \msg_line_context:.
+      { \msg_error:nnn { fontscale } { font-size-out-of-bounds } {#1} }
   }
 
 % DEFINE KEYS
@@ -393,10 +406,7 @@
 \cs_new_protected:Npn \__fontscale_keys_code_name:
   {
     \tl_if_in:NnTF \l_keys_value_tl { / }
-      {
-        \exp_last_unbraced:NV \__fontscale_keys_code_name:ww \l_keys_value_tl
-          \q_stop
-      }
+      { \exp_after:wN \__fontscale_keys_code_name:ww \l_keys_value_tl \q_stop }
       {
         \tl_set_eq:cN { l__fontscale_ \l_keys_key_str _size_tl }
           \l_keys_value_tl
@@ -713,7 +723,9 @@
           }
       }
     \fp_set:Nn \l__fontscale_normalsize_size_fp
-      { \l_fontscale_normalsize_size_dim }
+      { \dim_to_fp:n { \l_fontscale_normalsize_size_dim } }
+    \fp_set:Nn \l__fontscale_normalsize_size_reciprocal_fp
+      { \c_one_fp / \l__fontscale_normalsize_size_fp }
     \quark_if_no_value:NTF \l__fontscale_normalsize_baselineskip_tl
       {
         \skip_set:Nn \l_fontscale_normalsize_baselineskip_skip
@@ -784,7 +796,7 @@
       {
         \l__fontscale_musical_base_fp * \l__fontscale_musical_ratio_fp
         ^ ( \use:c { c_fontscale_#1_step_fp }
-        / \l__fontscale_musical_notes_fp )
+        * \l__fontscale_musical_notes_reciprocal_fp )
       }
   }
 % Sets the font size, font scale, and font baselineskip of the other font size
@@ -812,13 +824,25 @@
         {
           \cs_set_eq:NN \__fontscale_keys_process_other_fn_aux:n
             \__fontscale_keys_process_other_musical:n
-          \fp_set:Nn \l__fontscale_musical_base_fp
-            { \l__fontscale_musical_base_dim }
-          \fp_set:Nn \l__fontscale_musical_notes_fp
-            { \l__fontscale_musical_notes_int }
+          \dim_compare:nNnTF \l__fontscale_musical_base_dim =
+            \l_fontscale_normalsize_size_dim
+            {
+              \fp_set_eq:NN \l__fontscale_musical_base_fp
+                \l__fontscale_normalsize_size_fp
+              \fp_set_eq:NN \l__fontscale_musical_base_reciprocal_fp
+                \l__fontscale_normalsize_size_reciprocal_fp
+            }
+            {
+              \fp_set:Nn \l__fontscale_musical_base_fp
+                { \dim_to_fp:n { \l__fontscale_musical_base_dim } }
+              \fp_set:Nn \l__fontscale_musical_base_reciprocal_fp
+                { \c_one_fp / \l__fontscale_musical_base_fp }
+            }
+          \fp_set:Nn \l__fontscale_musical_notes_reciprocal_fp
+            { \c_one_fp / \int_use:N \l__fontscale_musical_notes_int }
           \fp_set:Nn \l__fontscale_musical_selectfont_fp
             {
-              \l__fontscale_musical_notes_fp
+              \int_use:N \l__fontscale_musical_notes_int
               / ln ( \l__fontscale_musical_ratio_fp )
             }
         }
@@ -876,25 +900,23 @@
       { \__fontscale_keys_process_other_fn_aux:n {#1} }
     \prg_break:
     \prg_break_point:
+    \fp_set:cn { l_fontscale_#1_scale_fp }
+      {
+        \dim_to_fp:n { \use:c { l_fontscale_#1_size_dim } }
+        * \l__fontscale_normalsize_size_reciprocal_fp
+      }
     \quark_if_no_value:cTF { l__fontscale_#1_baselineskip_tl }
       {
-        \fp_set:Nn \l__fontscale_tmp_fp { \use:c { l_fontscale_#1_size_dim } }
-        \fp_set:cn { l_fontscale_#1_scale_fp }
-          { \l__fontscale_tmp_fp / \l__fontscale_normalsize_size_fp }
         \skip_set:cn { l_fontscale_#1_baselineskip_skip }
           {
             \fp_to_dim:n
               {
-                \l__fontscale_tmp_fp * \l__fontscale_baselineskip_size_ratio_fp
+                \dim_to_fp:n { \use:c { l_fontscale_#1_size_dim } }
+                * \l__fontscale_baselineskip_size_ratio_fp
               }
           }
       }
       {
-        \fp_set:cn { l_fontscale_#1_scale_fp }
-          {
-            \use:c { l_fontscale_#1_size_dim }
-            / \l__fontscale_normalsize_size_fp
-          }
         \__fontscale_skip_set_from_user:cn { l_fontscale_#1_baselineskip_skip }
           { \use:c { l__fontscale_#1_baselineskip_tl } }
       }
@@ -1100,8 +1122,6 @@
       { \msg_error:nn { fontscale } { current-font-step-out-of-bounds } }
       { \__fontscale_set_font_step:n { (#1) + \l_fontscale_step_fp } }
   }
-% Using \str_case: here is significantly faster (and easier to write) than
-% repeatedly testing \fp_compare:.
 \cs_new_protected:Npn \__fontscale_set_font_step:n #1
   {
     \fp_set:Nn \l__fontscale_tmp_fp { round ( #1 , 5 ) }
@@ -1127,7 +1147,8 @@
                   {
                     \l__fontscale_musical_base_fp
                     * \l__fontscale_musical_ratio_fp
-                    ^ ( \l__fontscale_tmp_fp / \l__fontscale_musical_notes_fp )
+                    ^ ( \l__fontscale_tmp_fp
+                    * \l__fontscale_musical_notes_reciprocal_fp )
                   }
               }
           }
@@ -1188,9 +1209,16 @@
   {
     \fp_set:Nn \l__fontscale_tmp_fp {#1}
     \__fontscale_set_font_size:nn
-      { \fp_to_dim:n { \l__fontscale_tmp_fp * \l_fontscale_size_dim } }
       {
-        \fp_to_dim:n { \l__fontscale_tmp_fp * \l_fontscale_baselineskip_skip }
+        \fp_to_dim:n
+          { \l__fontscale_tmp_fp * \dim_to_fp:n { \l_fontscale_size_dim } }
+      }
+      {
+        \fp_to_dim:n
+          {
+            \l__fontscale_tmp_fp
+            * \dim_to_fp:n { \l_fontscale_baselineskip_skip }
+          }
       }
   }
 
